# wAEngine

./: CMakeLists.txt  README.md  maonaroda.sh  run.sh
assets/: resize.sh
docs/: arquitetura.txt  idealização.txt  implementacaobackend.txt  modulos-microservicos.txt  planodeciclosrefino.txt  planovivo.txt  rf-rnf.txt  teste.txt  uiux.txt
src/: ecs_test.cpp  main.cpp  main.cpp.bak.1758340973  main.cpp.bak.1758341302
src/core/: Clock.hpp  Component.hpp  Entity.hpp  GameState.hpp  Registry.hpp  Vec2.hpp
src/ecs/: Component.hpp  Entity.hpp  MovementSystem.cpp  MovementSystem.hpp  Registry.hpp  System.hpp
src/ecs/components/: Gravity.hpp  Kite.hpp  KiteComponent.hpp  LineComponent.hpp  Position.hpp  Renderable.hpp  Sprite.hpp  Velocity.hpp  Wind.hpp  WindComponent.hpp
src/ecs/debug/: DebugSystem.cpp  DebugSystem.hpp
src/ecs/systems/: DestroySystem.cpp  DestroySystem.hpp  HudSystem.cpp  HudSystem.cpp.bak.1758332036  HudSystem.hpp  KiteSystem.cpp  KiteSystem.hpp  LineSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  WindSystem.cpp  WindSystem.hpp
src/engine/: Application.hpp  HUD.hpp  Input.hpp  Renderer.cpp  Renderer.hpp  Screenshot.cpp  Screenshot.hpp  TextureLoader.cpp  TextureLoader.hpp  TextureManager.cpp  TextureManager.hpp
src/examples/kites/: KiteEntity.cpp  KiteEntity.hpp  LineEntity.cpp  LineEntity.hpp  ReelEntity.cpp  ReelEntity.hpp  main_kites.cpp
src/game/: Builds.hpp  Game.cpp  Game.hpp  Line.hpp  LineShape.hpp  WindGenerator.hpp  WindNoise.hpp
src/systems/: KiteSystem.cpp  KiteSystem.hpp  LineSystem.cpp  LineSystem.hpp  RenderSystem.cpp  WindSystem.cpp  WindSystem.hpp
